--- a/proyecto_cdvjoven/.env
+++ b/proyecto_cdvjoven/.env
@@ -7,3 +7,5 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_NAME=m4u4
+
+CLOUDINARY_URL=cloudinary://811859392756869:UYyeyip3EMK2NIi_lKwuzyN7Jbw@ddavbgbh5
